<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/backgroudColor"
    tools:context=".crudfiles.UpdateCategory">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/list_view_lr_margin"
        android:layout_marginRight="@dimen/list_view_lr_margin"
        android:orientation="vertical"
        android:paddingTop="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_category_name"
            android:textColor="@color/textGray"
            android:paddingLeft="5dp"
            android:paddingTop="6dp"
            android:paddingBottom="8dp"/>

        <EditText
            android:id="@+id/auc_txt_ucatName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/gray_border_bottom"
            android:inputType="textCapWords"
            android:maxLength="28"
            android:padding="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_category_desc"
            android:textColor="@color/textGray"
            android:paddingLeft="5dp"
            android:paddingTop="6dp"
            android:paddingBottom="8dp"/>

        <EditText
            android:id="@+id/auc_txt_ucatDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/gray_border_bottom"
            android:inputType="textMultiLine"
            android:lines="4"
            android:maxLength="100"
            android:padding="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp" />

    </LinearLayout>

    <Button
        android:id="@+id/auc_btn_update"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_size"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/update_button_border_radius"
        android:onClick="UpdateCategory"
        android:padding="5dp"
        android:text="@string/button_update"
        android:textColor="@color/textWhite" />

</LinearLayout>