<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whiteBgColor"
    tools:context=".crudfiles.DisplayWord">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/list_view_lr_margin"
        android:layout_marginTop="@dimen/list_view_top_margin"
        android:layout_marginRight="@dimen/list_view_lr_margin"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/bgSoftGray"
            android:orientation="horizontal"
            android:padding="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingRight="2dp"
                android:text="@string/text_category"
                android:textColor="@color/textGray" />

            <TextView
                android:id="@+id/adw_txt_dwCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/textGray"
                android:textIsSelectable="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/adw_txt_dwFromLang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingTop="6dp"
                android:paddingBottom="8dp"
                android:textColor="@color/textGray"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="12">

                <TextView
                    android:id="@+id/adw_txt_dwtranslateFrom"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="10.5"
                    android:background="@drawable/display_word_input_border_radius"
                    android:padding="10dp"
                    android:textColor="@color/textBlack"
                    android:textIsSelectable="true"
                    android:textSize="18sp" />

                <ImageButton
                    android:id="@+id/speak_from_language_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    android:background="@drawable/speak_button_border_radius"
                    android:onClick="SpeakFromLanguage"
                    android:padding="10dp"
                    android:src="@drawable/speak_icon" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/adw_txt_dwToLang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingTop="6dp"
                android:paddingBottom="8dp"
                android:textColor="@color/textGray"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="12">

                <TextView
                    android:id="@+id/adw_txt_dwtranslateTo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="10.5"
                    android:background="@drawable/input_border_radius"
                    android:padding="10dp"
                    android:textColor="@color/textBlack"
                    android:textIsSelectable="true"
                    android:textSize="18sp" />

                <ImageButton
                    android:id="@+id/speak_to_language_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    android:background="@drawable/speak_button_border_radius"
                    android:onClick="SpeakToLanguage"
                    android:padding="10dp"
                    android:src="@drawable/speak_icon" />
            </LinearLayout>

        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_size"
            android:layout_marginTop="40dp"
            android:background="@drawable/update_button_border_radius"
            android:onClick="DisplayUpdateButton"
            android:text="@string/button_edit"
            android:textColor="@color/textWhite" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_size"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/delete_button_border_radius"
            android:onClick="DisplayDeleteButton"
            android:text="@string/button_delete"
            android:textColor="@color/textWhite" />

    </LinearLayout>
</LinearLayout>